--- a/index.html
+++ b/index.html
@@ -238,61 +238,61 @@
                     </div>
 
                     <div class="h-fit autovendita">
-                        <h3 class="text-2xl font-bold">Toyota Yaris</h3>
-                        <h3 class="font-semibold mb-5">GR Yaris 1.6 Circuit </h3>
+                        <h3 class="text-2xl font-bold">Renault Clio</h3>
+                        <h3 class="font-semibold mb-5">3p 2.0 16v RS Luxe 200cv</h3>
                         <div class="image-container" data-current-index="0">
-                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/1.jpg" alt="Yaris GR">
-                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/2.jpg" alt="Yaris GR"
-                                style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/3.jpg" alt="Yaris GR"
-                                style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/4.jpg" alt="Yaris GR"
-                                style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/5.jpg" alt="Yaris GR"
-                                style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/6.jpg" alt="Yaris GR"
-                                style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/7.jpg" alt="Yaris GR"
-                                style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/8.jpg" alt="Yaris GR"
-                                style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/9.jpg" alt="Yaris GR"
-                                style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/10.jpg" alt="Yaris GR"
-                                style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/11.jpg" alt="Yaris GR"
-                                style="display: none;">
-                            <img class="immaginevendita mb-5" src="./assets/images/Yaris-GR/12.jpg" alt="Yaris GR"
-                                style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/1.jpg"
+                                alt="Renault Clio RS">
+                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/2.jpg"
+                                alt="Renault Clio RS" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/3.jpg"
+                                alt="Renault Clio RS" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/4.jpg"
+                                alt="Renault Clio RS" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/5.jpg"
+                                alt="Renault Clio RS" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/6.jpg"
+                                alt="Renault Clio RS" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/7.jpg"
+                                alt="Renault Clio RS" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/8.jpg"
+                                alt="Renault Clio RS" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/9.jpg"
+                                alt="Renault Clio RS" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/10.jpg"
+                                alt="Renault Clio RS" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/11.jpg"
+                                alt="Renault Clio RS" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/12.jpg"
+                                alt="Renault Clio RS" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/13.jpg"
+                                alt="Renault Clio RS" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/14.jpg"
+                                alt="Renault Clio RS" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/15.jpg"
+                                alt="Renault Clio RS" style="display: none;">
+                            <img class="immaginevendita mb-5" src="./assets/images/renault-clio-rs/16.jpg"
+                                alt="Renault Clio RS" style="display: none;">
                             <button class="prev" onclick="prevImage(this)">&#10094;</button>
                             <button class="next" onclick="nextImage(this)">&#10095;</button>
                         </div>
-                        <a class="font-semibold">Anno:</a> 2022<br>
-                        <a class="font-semibold">Cilindrata:</a> 1600 cc <br>
-                        <a class="font-semibold">Potenza:</a> 192 KW (261 CV)<br>
-                        <a class="font-semibold">Euro:</a> 6<br>
+                        <a class="font-semibold">Anno:</a> 2007<br>
+                        <a class="font-semibold">Cilindrata:</a> 2000 cc <br>
+                        <a class="font-semibold">Potenza:</a> 145 KW (197 CV)<br>
+                        <a class="font-semibold">Euro:</a> <br>
                         <a class="font-semibold">Carburante:</a> Benzina <br>
-                        <a class="font-semibold">Chilometraggio:</a> 17.000 Km<br>
+                        <a class="font-semibold">Chilometraggio:</a> 160.000 Km<br>
                         <a class="font-semibold">Neopatentati:</a> No<br>
-                        <a class="font-semibold" style="font-size: 1.5em;">Prezzo: VENDUTA<br></a>
+                        <a class="font-semibold" style="font-size: 1.5em;">Prezzo: 14.000€<br></a>
+    
                         <button class="show-more mt-5 mb-4">Mostra di più</button>
                         <div style="display: none;">
-                            <a class="font-semibold">Descrizione:</a> Vettura venduta dalla rete ufficiale Toyota Italia
-                            e
-                            ancora in garanzia per 3 anni. 1° tagliando eseguito presso la Toyota Sarco di Curno
-                            04/2024,
-                            condizioni pari al nuovo, monta ancora le gomme originali che sono praticamente all'80%.
-                            Vettura
-                            in pronta consegna; bollo e superbollo appena pagati.
-                            <br>
-
-
-                            <div class="flex w-full place-content-center mt-4">
-                                <button
-                                    onclick="window.location.href='https://www.autoscout24.it/annunci/toyota-yaris-gr-yaris-1-6-circuit-benzina-nero-40cfd03c-c477-4eac-9e66-27217f6591fb?utm_source=web-share&utm_medium=copy&utm_campaign=share';"
-                                    class="pulsante text-center">Vai all'annuncio completo</button>
-                            </div>
-
+                            <a class="font-semibold">Descrizione:</a> Clio Rs unico proprietario in ottime condizioni.
+                            Fanali posteriori a led, cerchi e gomme nuove, aspirazione diretta, batteria spostata
+                            dietro, scarico completo, assetto, dischi forati, cambio ravvicinato, volante nuovo e
+                            manometri pressione olio e temperatura olio aggiuntivi. Auto perfetta per divertirsi nei
+                            track day. <br>
+    
                             <div class="flex w-full place-content-center mt-4">
                                 <button onclick="window.location.href='#contatti';" class="pulsante text-center">Chiedi
                                     maggiori informazioni</button>
